Remove runAs* for openshift deployment (#1827)
