# apis/installer/v1alpha1/kubedb_webhook_server_types.go
@@ -82,6 +82,8 @@ type KubedbWebhookServerSpec struct {
 	NetworkPolicy      NetworkPolicySpec        `json:"networkPolicy"`
 	// +optional
 	DefaultSeccompProfileType string `json:"defaultSeccompProfileType"`
+	// +optional
+	Distro DistroSpec `json:"distro"`
 }
 
 type WebhookAPIServerSpec struct {
