# apis/installer/v1alpha1/types.go
@@ -103,3 +103,7 @@ type PSPSpec struct {
 type NetworkPolicySpec struct {
 	Enabled bool `json:"enabled"`
 }
+
+type DistroSpec struct {
+	Openshift bool `json:"openshift"`
+}
