# charts/kubedb-schema-manager/values.openapiv3_schema.yaml
@@ -1312,6 +1312,13 @@ properties:
     type: object
   criticalAddon:
     type: boolean
+  distro:
+    properties:
+      openshift:
+        type: boolean
+    required:
+    - openshift
+    type: object
   enforceTerminationPolicy:
     type: boolean
   fullnameOverride:
